tests/compile_errors/015-bad-pattern.buzz
| Could not compile pattern, error at 5: unknown property name after \P or \p
import "std";

test "bad pattern" {
    pat bad = $"bad\pattern";
}